--- a/index.html
+++ b/index.html
@@ -99,13 +99,15 @@
                           <div class="item">
                             <div class="sp-subtitle">Machine Learning</div>
                           </div>
+                          <div class="item">
+                            <div class="sp-subtitle">Deep Learning</div>
+                          </div>
+                          <div class="item">
+                            <div class="sp-subtitle">Python</div>
+                          </div>
                         </div>
                       </div>
 
-                      <div class="social-links">
-                        <a href="https://www.linkedin.com/in/luiz-philipe-rangel" target="_blank"><i class="fa fa-linkedin"></i></a>
-                        <a href="https://www.instagram.com/veroneseluiz8/" target="_blank"><i class="fa fa-instagram"></i></a>
-                      </div>
                     </div>
                   </div>
                 </div>
@@ -133,6 +135,7 @@
                         <li><span class="title">Cidade/Estado</span><span class="value">Nova Friburgo, RJ</span></li>
                         <li><span class="title">E-mail</span><span class="value">veroneseluiz8@gmail.com</span></li>
                         <li><span class="title">Fone</span><span class="value">+5522 998883787</span></li>
+                        <a href="https://www.linkedin.com/in/luiz-philipe-rangel" target="_blank">Linkedin</a>
                       </ul>
                     </div>
 
@@ -421,7 +424,7 @@
                       <!-- Portfolio Item 4 -->
                       <figure class="item" data-groups='["all", "Aquisição e Limpeza de Dados","Análise Exploratória e Manipulação de Dados","Modelagem","Deploy"]'>
                         <a href="https://github.com/Veroneseluiz8/Portifolio-de-Commodities" class= "btn btn-secondary" target="_blank">Link GitHub</a>
-                          <img src="images/portfolio/com1.jpg" alt="">
+                          <img src="images/portfolio/fig1.jpg" alt="">
                           <div>
                             <h5 class="name">Portifolio de Commodities com Streamlit</h5>
                             <small>EDA, Modelagem e Deploy</small>
@@ -459,7 +462,7 @@
       <!-- /Main Content -->
     </div>
     <footer>
-      <div class="copyrights">&copy; Geek University</div>
+      <div class="copyrights">&copy; Luiz Philipe Rangel</div>
     </footer>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/pages-switcher.js"></script>
