--- a/index.html
+++ b/index.html
@@ -435,6 +435,18 @@
                       <!-- /Portfolio Item 4 -->
 
                       <!-- Portfolio Item 5 -->
+                      <figure class="item" data-groups='["all", "Análise Exploratória e Manipulação de Dados"]'>
+                        <a href="https://github.com/Veroneseluiz8/Desafio-inferencia" class= "btn btn-secondary" target="_blank">Link GitHub</a>
+                          <img src="images/portfolio/inferencia.jpg" alt="">
+                          <div>
+                            <h5 class="name">Inferência Estatística</h5>
+                            <small>EDA</small>
+                            <i class="fa fa-file-text-o"></i>
+                          </div>
+                        </a>
+                      </figure>
+                      <!-- /Portfolio Item 5 -->
+                      <!-- Portfolio Item 6 -->
                       <figure class="item" data-groups='["all", "Deploy"]'>
                         <a href="https://github.com/Veroneseluiz8/Veroneseluiz8.github.io" class= "btn btn-secondary" target="_blank">Link GitHub</a>
                           <img src="images/portfolio/curricfig.png" alt="">
